--- a/146. LRU缓存机制/方法一.md
+++ b/146. LRU缓存机制/方法一.md
@@ -26,7 +26,7 @@ class LRUCache extends LinkedHashMap<Integer, Integer>{
     public void put(int key, int value) {
         super.put(key, value);
     }
-
+    //实现LRU的关键方法，如果map里面的元素个数大于了缓存最大容量，则删除（缓存的）链表的顶端元素
     @Override//Entry是Map接口的一个内部接口
     protected boolean removeEldestEntry(Map.Entry<Integer, Integer> eldest) {
         return size() > capacity;
