--- a/146. LRU缓存机制/方法一.md
+++ b/146. LRU缓存机制/方法一.md
@@ -87,4 +87,4 @@ values获得的是value集合，
 entryset获得的是键值对的集合。
 具体怎么用看你自己情况需要哈。
 
-
+### **[图解LinkedHashMap参考这篇文章](https://www.jianshu.com/p/8f4f58b4b8ab)**  
